--- a/src/App.css
+++ b/src/App.css
@@ -64,10 +64,10 @@ h1,
   font-family: var(--font-raleway);
   font-weight: 500;
   padding-right: 1rem;
-
   outline: none;
   color: #a1a1a1;
   background: #1f2123;
+  cursor: pointer;
 }
 
 .search img {
@@ -97,6 +97,8 @@ h1,
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+  animation: slideInDown;
+  animation-duration: 2s;
 }
 
 .movie {
