--- a/src/App.css
+++ b/src/App.css
@@ -206,6 +206,7 @@ h1,
 
 .favorites-section {
   width: 100%;
+  max-width: 1000px;
   margin-top: 5em;
   border: 1px solid #f7730799;
   box-shadow: 5px 5px 7px rgba(247, 115, 7, 0.6);
